--- a/FT/index.html
+++ b/FT/index.html
@@ -21,7 +21,7 @@
 <li><a href = "./tut3.pdf">Tutorium 3</a> 	&nbsp; 8.5.2020</li>
 <li><a href = "./tut4.pdf">Tutorium 4</a> 	&nbsp; 15.5.2020</li>
 <li><a href = "./tut5.pdf">Tutorium 5</a> 	&nbsp; 22.5.2020<ul><li>Kennt ihr einen elementaren Beweis für \(P(z) = \sum_{k=0}^n \left( \sum_{i=0}^k (-1)^{k-i} \binom{k}{i} P(i) \right) \binom{z}{k}\), wo \( P \) ein Polynom vom Grad \(n\) ist? </li></ul></li>
-<li><a href = "./tut6.pdf">Tutorium 6</a>	&nbsp; 29.5.2020<li>
+<li><a href = "./tut6.pdf">Tutorium 6</a>	&nbsp; 29.5.2020</li>
 </ul>
 </p>
 </body>
