--- a/FT/index.html
+++ b/FT/index.html
@@ -16,15 +16,15 @@
 <p>Bei Fragen oder Hinweisen freue ich mich über eine Mail an robin.mader'at'campus.lmu.de.</p>
 <p>
 <ul>
-<li><a href = "./tut1.pdf">Tutorium 1</a> 	&nbsp; 24.4.2020</li>
-<li><a href = "./tut2.pdf">Tutorium 2</a> 	&nbsp; 1.5.2020</li>
-<li><a href = "./tut3.pdf">Tutorium 3</a> 	&nbsp; 8.5.2020</li>
-<li><a href = "./tut4.pdf">Tutorium 4</a> 	&nbsp; 15.5.2020</li>
-<li><a href = "./tut5.pdf">Tutorium 5</a> 	&nbsp; 22.5.2020<ul><li>Kennt ihr einen elementaren Beweis für \(P(z) = \sum_{k=0}^n \left( \sum_{i=0}^k (-1)^{k-i} \binom{k}{i} P(i) \right) \binom{z}{k}\), wo \( P \) ein Polynom vom Grad \(n\) ist? </li></ul></li>
-<li><a href = "./tut6.pdf">Tutorium 6</a>	&nbsp; 29.5.2020</li>
-<li><a href = "./tut7.pdf">Tutorium 7</a>	&nbsp; 5.6.2020</li>
-<li><a href = "./tut8.pdf">Tutorium 8</a>	&nbsp; 12.6.2020<ul><li><a href="https://www.youtube.com/watch?v=b7FxPsqfkOY">Windungszahl, Nullstellen, Darstellung komplexer Funktionen mit Farbe</a></li><li><a href="https://people.ucsc.edu/~wbolden/complex/#z">Complex Function Plotter</a></li></ul></li>
-<li><a href = "./tut9.pdf">Tutorium 9</a>	&nbsp; 19.6.2020</li>
+<li><a href = "./tut1.pdf">Tutorium 1</a> 	&nbsp;&nbsp;&nbsp; 24.4.2020</li>
+<li><a href = "./tut2.pdf">Tutorium 2</a> 	&nbsp;&nbsp;&nbsp; 1.5.2020</li>
+<li><a href = "./tut3.pdf">Tutorium 3</a> 	&nbsp;&nbsp;&nbsp; 8.5.2020</li>
+<li><a href = "./tut4.pdf">Tutorium 4</a> 	&nbsp;&nbsp;&nbsp; 15.5.2020</li>
+<li><a href = "./tut5.pdf">Tutorium 5</a> 	&nbsp;&nbsp;&nbsp; 22.5.2020<ul><li>Kennt ihr einen elementaren Beweis für \(P(z) = \sum_{k=0}^n \left( \sum_{i=0}^k (-1)^{k-i} \binom{k}{i} P(i) \right) \binom{z}{k}\), wo \( P \) ein Polynom vom Grad \(n\) ist? </li></ul></li>
+<li><a href = "./tut6.pdf">Tutorium 6</a>	&nbsp;&nbsp;&nbsp; 29.5.2020</li>
+<li><a href = "./tut7.pdf">Tutorium 7</a>	&nbsp;&nbsp;&nbsp; 5.6.2020</li>
+<li><a href = "./tut8.pdf">Tutorium 8</a>	&nbsp;&nbsp;&nbsp; 12.6.2020<ul><li><a href="https://www.youtube.com/watch?v=b7FxPsqfkOY">Windungszahl, Nullstellen, Darstellung komplexer Funktionen mit Farbe</a></li><li><a href="https://people.ucsc.edu/~wbolden/complex/#z">Complex Function Plotter</a></li></ul></li>
+<li><a href = "./tut9.pdf">Tutorium 9</a>	&nbsp;&nbsp;&nbsp; 19.6.2020</li>
 <li><a href = "./tut10.pdf">Tutorium 10</a>	&nbsp; 26.6.2020</li>
 </ul>
 </p>
