--- a/FT/index.html
+++ b/FT/index.html
@@ -27,7 +27,7 @@
 <li><a href = "./tut9.pdf">Tutorium 9</a>	&nbsp;&nbsp;&nbsp; 19.6.2020</li>
 <li><a href = "./tut10.pdf">Tutorium 10</a>	&nbsp; 26.6.2020</li>
 <li><a href = "./tut11.pdf">Tutorium 11</a>	&nbsp; 3.7.2020</li>
-<li><a href = "./tut12.pdf">Tutorium 12</a>	&nbsp; 10.7.2020</li>
+<li><a href = "./tut12.pdf">Tutorium 12</a>	&nbsp; 10.7.2020<ul><li>Ich fände es gut, wenn sich für Tutorium 13 jeder von euch einen Ansatz zu einer Aufgabe seiner Wahl überlegt. >:)</li></ul></li>
 </ul>
 </p>
 </body>
