--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hmm? ¯\_(ツ)_/¯</h1>
+<h1> ¯\_(ツ)_/¯</h1>
+<p>
+<u>
+<li><a href="./ana1">Analysis 1 WS20/21<a></li>
+<li><a href="./FT">Funktionentheorie SS2020<a></li>
+</u>
+</p>
 </body>
 </html>
