--- a/ana1/index.html
+++ b/ana1/index.html
@@ -17,7 +17,7 @@ Alles ohne Gewähr. </p>
 <p>Bei Fragen oder Hinweisen freue ich mich über eine Mail an robin.mader'at'campus.lmu.de.</p>
 <p>
 <ul>
-<li>&nbsp;&nbsp; 6.11.2020, &nbsp; Tutorium 1: &nbsp;<a href = "./ana1tut1.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m1.pdf">Aufschrift</a> </li>
+<li>&nbsp;&nbsp; 6.11.2020, &nbsp; Tutorium 1: &nbsp;<a href = "./ana1tut1.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m1.pdf">Aufschrift</a>&nbsp; <a href = "./ana1lsg1.pdf">Ausgewählte Lösungen</a> </li>
 </ul>
 </p>
 <p style="font-size:0.69px"><a href="./meme/1.jpg" style="text-decoration: none">Meme.</a></p>
