--- a/ana1/index.html
+++ b/ana1/index.html
@@ -20,7 +20,7 @@ Alles ohne Gewähr. </p>
 <li>&nbsp;&nbsp;  6.11.2020, &nbsp; Tutorium 1: &nbsp;<a href = "./ana1tut1.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m1.pdf">Aufschrift</a>&nbsp; <a href = "./ana1lsg1.pdf">Ausgewählte Lösungen</a> </li>
 <li>&nbsp;13.11.2020, &nbsp; Tutorium 2: &nbsp;<a href = "./ana1tut2.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m2.pdf">Aufschrift</a>&nbsp;  <a href = "./ana1lsg2.pdf">Ausgewählte Lösungen</a><ul><li>Die versprochene Umfrage zur Gestaltung des Tutoriums: <script type="text/javascript" charset="utf-8" src="https://secure.polldaddy.com/p/10654998.js"></script>
 <noscript><a href="https://poll.fm/10654998">Ab wann wollen wir mit den Breakout Sessions beginnen? (Ana1 Fr 8:15-10:00)</a></noscript></li></ul></li>
-<li>&nbsp;20.11.2020, &nbsp; Tutorium 3: &nbsp;<a href = "./ana1tut3.pdf">Aufgaben</a>&nbsp;</li>
+<li>&nbsp;20.11.2020, &nbsp; Tutorium 3: &nbsp;<a href = "./ana1tut3.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m3.pdf">Aufschrift</a>&nbsp;  </li>
 </ul>
 </p>
 <p style="font-size:0.69px"><a href="./meme/2.jpg" style="text-decoration: none">Meme.</a></p>
