--- a/ana1/index.html
+++ b/ana1/index.html
@@ -14,7 +14,7 @@
 <p>Hier findet ihr das zusätzliche Übungsmaterial aus unserem Tutorium.</p>
 <p>Disclaimer: Bei den unten verlinkten Dokumenten handelt es sich nicht um vollständige Lösungen, und Fehlerlosigkeit wird nicht garantiert. Der digitale "Tafelanschrieb" unseres Tutoriums ist das Ergebnis unserer Diskussionen, und erhebt daher auch nicht den Anspruch, ohne die Teilnahme am Tutorium verständlich zu sein. Um einen passenden Stil für die eigene Bearbeitung von Übungsaufgaben zu finden, sollte man sich nicht daran orientieren.
 Alles ohne Gewähr. </p>
-<p>Bei Fragen oder Hinweisen freue ich mich über eine Mail an robin.mader'at'campus.lmu.de.</p>
+<p>Bei Fragen oder Hinweisen freue ich mich über eine E-Mail an robin.mader'at'campus.lmu.de.</p>
 <p>
 <ul>
 <li>&nbsp;&nbsp;  6.11.2020, &nbsp; Tutorium 1: &nbsp;<a href = "./ana1tut1.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m1.pdf">Aufschrift</a>&nbsp; <a href = "./ana1lsg1.pdf">Ausgewählte Lösungen</a> </li>
