--- a/ana1/index.html
+++ b/ana1/index.html
@@ -24,7 +24,7 @@ Bei weiteren Vorschlägen zur Durchführung des Online-Tutoriums bin ich für ei
 <li>&nbsp;27.11.2020, &nbsp; Tutorium 4: &nbsp;<a href = "./ana1tut4.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m4.pdf">Aufschrift</a>&nbsp; <a href = "./ana1lsg4.pdf">Ausgewählte Lösungen</a> </li>
 <li>&nbsp;&nbsp; 4.12.2020, &nbsp; Tutorium 5: &nbsp;<a href = "./ana1tut5.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m5.pdf">Aufschrift</a>&nbsp;  </li>
 <li>&nbsp;11.12.2020, &nbsp; Tutorium 6: &nbsp;<a href = "./ana1tut6.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m6.pdf">Aufschrift</a>&nbsp; </li>
-<li>&nbsp;18.12.2020, &nbsp; Tutorium 7: &nbsp;<a href = "./ana1tut7.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m7.pdf">Aufschrift</a>&nbsp; </li>
+<li>&nbsp;18.12.2020, &nbsp; Tutorium 7: &nbsp;<a href = "./ana1tut7.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m7.pdf">Aufschrift</a>&nbsp; <a href = "./ana1lsg7.pdf">Ausgewählte Lösungen</a> </li>
 </ul>
 </p>
 <p style="font-size:4.20px"><a href="./meme/7.jpg" style="text-decoration: none">Meme.</a></p>
