--- a/ana1/index.html
+++ b/ana1/index.html
@@ -26,7 +26,7 @@ Bei weiteren Vorschlägen zur Durchführung des Online-Tutoriums bin ich für ei
 <li>&nbsp;11.12.2020, &nbsp; Tutorium 6: &nbsp;<a href = "./ana1tut6.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m6.pdf">Aufschrift</a>&nbsp; </li>
 <li>&nbsp;18.12.2020, &nbsp; Tutorium 7: &nbsp;<a href = "./ana1tut7.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m7.pdf">Aufschrift</a>&nbsp; <a href = "./ana1lsg7.pdf">Ausgewählte Lösungen</a> </li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp; 8.1.2021, &nbsp; Tutorium 8: &nbsp;<a href = "./ana1tut8.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m8.pdf">Aufschrift</a>&nbsp; </li>
-<li>&nbsp;&nbsp;&nbsp; 15.1.2021, &nbsp; Tutorium 9: &nbsp;<a href = "./ana1tut9.pdf">Aufgaben</a>&nbsp; <a href = "./ana1kt.pdf">Kurztest</a> </li>
+<li>&nbsp;&nbsp; 15.1.2021, &nbsp; Tutorium 9: &nbsp;<a href = "./ana1tut9.pdf">Aufgaben</a>&nbsp; <a href = "./ana1kt.pdf">Kurztest</a> </li>
 </ul>
 </p>
 <p style="font-size:4.20px"><a href="./meme/9.jpg" style="text-decoration: none">Meme.</a></p>
