--- a/ana1/index.html
+++ b/ana1/index.html
@@ -17,16 +17,16 @@ Alles ohne Gewähr. </p>
 <p>Bei Fragen oder Hinweisen freue ich mich über eine E-Mail an robin.mader'at'campus.lmu.de.</p>
 <p>
 <ul>
-<li>&nbsp;&nbsp;  6.11.2020, &nbsp; Tutorium 1: &nbsp;<a href = "./ana1tut1.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m1.pdf">Aufschrift</a>&nbsp; <a href = "./ana1lsg1.pdf">Ausgewählte Lösungen</a> </li>
-<li>&nbsp;13.11.2020, &nbsp; Tutorium 2: &nbsp;<a href = "./ana1tut2.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m2.pdf">Aufschrift</a>&nbsp;  <a href = "./ana1lsg2.pdf">Ausgewählte Lösungen</a><ul><li>Ergebnisse der Umfrage "Ab wann wollen wir mit den Breakout Sessions beginnen?": Da 11 der 19 Stimmen gegen die Durchführung von Breakout Sessions sind, bleiben wir vorerst bei den gemeinsamen Diskussionen mit allen Teilnehmern. Ich freue mich sehr über eure aktive Teilnahme am Tutorium! >:) 
+<li>&nbsp;&nbsp;  6.11.2020, &nbsp; Tutorium 1: &nbsp; &nbsp;<a href = "./ana1tut1.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m1.pdf">Aufschrift</a>&nbsp; <a href = "./ana1lsg1.pdf">Ausgewählte Lösungen</a> </li>
+<li>&nbsp;13.11.2020, &nbsp; Tutorium 2: &nbsp; &nbsp;<a href = "./ana1tut2.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m2.pdf">Aufschrift</a>&nbsp;  <a href = "./ana1lsg2.pdf">Ausgewählte Lösungen</a><ul><li>Ergebnisse der Umfrage "Ab wann wollen wir mit den Breakout Sessions beginnen?": Da 11 der 19 Stimmen gegen die Durchführung von Breakout Sessions sind, bleiben wir vorerst bei den gemeinsamen Diskussionen mit allen Teilnehmern. Ich freue mich sehr über eure aktive Teilnahme am Tutorium! >:) 
 Bei weiteren Vorschlägen zur Durchführung des Online-Tutoriums bin ich für eine E-Mail dankbar. </li></ul></li>
-<li>&nbsp;20.11.2020, &nbsp; Tutorium 3: &nbsp;<a href = "./ana1tut3.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m3.pdf">Aufschrift</a>&nbsp;  </li>
-<li>&nbsp;27.11.2020, &nbsp; Tutorium 4: &nbsp;<a href = "./ana1tut4.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m4.pdf">Aufschrift</a>&nbsp; <a href = "./ana1lsg4.pdf">Ausgewählte Lösungen</a> </li>
-<li>&nbsp;&nbsp; 4.12.2020, &nbsp; Tutorium 5: &nbsp;<a href = "./ana1tut5.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m5.pdf">Aufschrift</a>&nbsp;  </li>
-<li>&nbsp;11.12.2020, &nbsp; Tutorium 6: &nbsp;<a href = "./ana1tut6.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m6.pdf">Aufschrift</a>&nbsp; </li>
-<li>&nbsp;18.12.2020, &nbsp; Tutorium 7: &nbsp;<a href = "./ana1tut7.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m7.pdf">Aufschrift</a>&nbsp; <a href = "./ana1lsg7.pdf">Ausgewählte Lösungen</a> </li>
-<li>&nbsp;&nbsp;&nbsp;&nbsp; 8.1.2021, &nbsp; Tutorium 8: &nbsp;<a href = "./ana1tut8.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m8.pdf">Aufschrift</a>&nbsp; </li>
-<li>&nbsp;&nbsp; 15.1.2021, &nbsp; Tutorium 9: &nbsp;<a href = "./ana1tut9.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m9.pdf">Aufschrift</a>&nbsp; <a href = "./ana1kt.pdf">Kurztest</a>&nbsp; <a href = "./ana1ktlsg.pdf">Lösung zum Kurztest</a> </li>
+<li>&nbsp;20.11.2020, &nbsp; Tutorium 3: &nbsp; &nbsp;<a href = "./ana1tut3.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m3.pdf">Aufschrift</a>&nbsp;  </li>
+<li>&nbsp;27.11.2020, &nbsp; Tutorium 4: &nbsp; &nbsp;<a href = "./ana1tut4.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m4.pdf">Aufschrift</a>&nbsp; <a href = "./ana1lsg4.pdf">Ausgewählte Lösungen</a> </li>
+<li>&nbsp;&nbsp; 4.12.2020, &nbsp; Tutorium 5: &nbsp; &nbsp;<a href = "./ana1tut5.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m5.pdf">Aufschrift</a>&nbsp;  </li>
+<li>&nbsp;11.12.2020, &nbsp; Tutorium 6: &nbsp; &nbsp;<a href = "./ana1tut6.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m6.pdf">Aufschrift</a>&nbsp; </li>
+<li>&nbsp;18.12.2020, &nbsp; Tutorium 7: &nbsp; &nbsp;<a href = "./ana1tut7.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m7.pdf">Aufschrift</a>&nbsp; <a href = "./ana1lsg7.pdf">Ausgewählte Lösungen</a> </li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp; 8.1.2021, &nbsp; Tutorium 8: &nbsp; &nbsp;<a href = "./ana1tut8.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m8.pdf">Aufschrift</a>&nbsp; </li>
+<li>&nbsp;&nbsp; 15.1.2021, &nbsp; Tutorium 9: &nbsp; &nbsp;<a href = "./ana1tut9.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m9.pdf">Aufschrift</a>&nbsp; <a href = "./ana1kt.pdf">Kurztest</a>&nbsp; <a href = "./ana1ktlsg.pdf">Lösung zum Kurztest</a> </li>
 <li>&nbsp;&nbsp; 22.1.2021, &nbsp; Tutorium 10: &nbsp;<a href = "./ana1tut10.pdf">Aufgaben</a></li>
 </ul>
 </p>
