--- a/ana1/index.html
+++ b/ana1/index.html
@@ -27,7 +27,7 @@ Bei weiteren Vorschlägen zur Durchführung des Online-Tutoriums bin ich für ei
 <li>&nbsp;18.12.2020, &nbsp; Tutorium 7: &nbsp; &nbsp;<a href = "./ana1tut7.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m7.pdf">Aufschrift</a>&nbsp; <a href = "./ana1lsg7.pdf">Ausgewählte Lösungen</a> </li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp; 8.1.2021, &nbsp; Tutorium 8: &nbsp; &nbsp;<a href = "./ana1tut8.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m8.pdf">Aufschrift</a>&nbsp; </li>
 <li>&nbsp;&nbsp; 15.1.2021, &nbsp; Tutorium 9: &nbsp; &nbsp;<a href = "./ana1tut9.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m9.pdf">Aufschrift</a>&nbsp; <a href = "./ana1kt.pdf">Kurztest</a>&nbsp; <a href = "./ana1ktlsg.pdf">Lösung zum Kurztest</a> </li>
-<li>&nbsp;&nbsp; 22.1.2021, &nbsp; Tutorium 10: &nbsp;<a href = "./ana1tut10.pdf">Aufgaben</a></li>
+<li>&nbsp;&nbsp; 22.1.2021, &nbsp; Tutorium 10: &nbsp;<a href = "./ana1tut10.pdf">Aufgaben</a>&nbsp; <a href = "./ana1m10.pdf">Aufschrift</a></li>
 </ul>
 </p>
 <p style="font-size:4.20px"><a href="./meme/10.jpg" style="text-decoration: none">Meme.</a></p>
