--- a/LA2/index.html
+++ b/LA2/index.html
@@ -18,5 +18,9 @@ Alles ohne Gewähr. </p>
 <p>
 <ul>
 <li>&nbsp;&nbsp;  14.4.2021, &nbsp; Tutorium 1: &nbsp; &nbsp;<a href = "./la2tut1.pdf">Aufschrift</a></li>
+<li>&nbsp;&nbsp;  21.4.2021, &nbsp; Tutorium 2: &nbsp; &nbsp;<a href = "./la2tut2.pdf">Aufschrift</a></li>
+</ul>
+</p>
+<p><a href="./meme/1.jpg" >Meme.</a></p>
 </body>
 </html>
