--- a/LA2/index.html
+++ b/LA2/index.html
@@ -24,6 +24,7 @@ Alles ohne Gewähr. </p>
 <li>&nbsp;&nbsp;  12.5.2021, &nbsp; Tutorium 5: &nbsp; &nbsp;<a href = "./la2tut5.pdf">Aufschrift</a><ul><li>Ich habe noch eine Seite über symmetrische/schiefsymmetrische/orthogonale lineare Abbildungen angefügt! :)</li></ul></li>
 <li>&nbsp;&nbsp;  19.5.2021, &nbsp; Tutorium 6: &nbsp; &nbsp;<a href = "./la2tut6.pdf">Aufschrift</a><ul><li><a href = "./la2tut6_pr.pdf">Hier</a> findet ihr noch ein paar Überlegungen zu orthogonalen Projektionen in der reellen Ebene. >:)</li></ul></li>
 <li>&nbsp;&nbsp;  26.5.2021, &nbsp; Tutorium 7: &nbsp; &nbsp;<a href = "./la2tut7.pdf">Aufschrift</a></li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;  2.6.2021, &nbsp; Tutorium 8: &nbsp; &nbsp; Erinnerung: <a href = "./la2tut8_ggt.pdf">Euklidischer Algorithmus</a></li>
 </ul>
 </p>
 <p><a href="./meme/5.jpg" >Meme.</a></p>
