--- a/LA2/index.html
+++ b/LA2/index.html
@@ -28,7 +28,7 @@ Alles ohne Gewähr. </p>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;  9.6.2021, &nbsp; Tutorium 9: &nbsp; &nbsp;<a href = "./la2tut9.pdf">Aufschrift</a></li>
 <li>&nbsp;&nbsp;  16.6.2021, &nbsp; Tutorium 10: &nbsp;<a href = "./la2tut10.pdf">Aufschrift</a></li>
 <li>&nbsp;&nbsp;  23.6.2021, &nbsp; Tutorium 11: &nbsp;<a href = "./la2tut11.pdf">Aufschrift</a></li>
-<li>&nbsp;&nbsp;  30.6.2021, &nbsp; Tutorium 12: &nbsp;<a href = "./la2tut12.pdf">Aufschrift</a></li>
+<li>&nbsp;&nbsp;  30.6.2021, &nbsp; Tutorium 12: &nbsp;<a href = "./la2tut12.pdf">Aufschrift</a><ul><li>3x3-Matrizen werden, bis auf Ähnlichkeit, eindeutig durch Minimal- und charakteristisches Polynom festgelegt: <a href = "./la2tut12_cm.pdf">Tatsächlich!</a></li></ul></li>
 </ul>
 </p>
 <p><a href="./meme/10.jpg" >Meme.</a></p>
