--- a/LA2/index.html
+++ b/LA2/index.html
@@ -30,7 +30,7 @@ Alles ohne Gewähr. </p>
 <li>&nbsp;&nbsp;  23.6.2021, &nbsp; Tutorium 11: &nbsp;<a href = "./la2tut11.pdf">Aufschrift</a></li>
 <li>&nbsp;&nbsp;  30.6.2021, &nbsp; Tutorium 12: &nbsp;<a href = "./la2tut12.pdf">Aufschrift</a><ul><li>3x3-Matrizen werden, bis auf Ähnlichkeit, eindeutig durch Minimal- und charakteristisches Polynom festgelegt: <a href = "./la2tut12_cm.pdf">Tatsächlich!</a></li></ul></li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;  7.7.2021, &nbsp; Tutorium 13: &nbsp;<a href = "./la2tut13.pdf">Aufschrift</a><ul><li><a href = "./la2tut13_za.pdf">Zusatzaufgaben</a></li></ul></li>
-<li>&nbsp;&nbsp;  14.7.2021, &nbsp; Tutorium 14: &nbsp;<ul><li>9.7.2021: <a href = "./pk.pdf">Probeklausur</a> - Besprechung am 14.7.2021 :) - Anmerkung 12.7.2021: Tippfehler in Aufgaben 4 und 5 ausgebessert.</li></ul></li>
+<li>&nbsp;&nbsp;  14.7.2021, &nbsp; Tutorium 14: &nbsp;<ul><li>9.7.2021: <a href = "./pk.pdf">Probeklausur</a>, <a href = "./pk_lsg.pdf">Lösungen</a></li></ul></li>
 </ul>
 </p>
 <p><a href="./meme/13.jpg" >Meme.</a></p>
