--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <li><a href="./LA2">Lineare Algebra 2 SS2021<a></li>
 <li><a href="./ana1">Analysis 1 WS2020/2021<a></li>
 <li><a href="./FT">Funktionentheorie SS2020<a></li>
+<li><a href="./ana3"> Analysis 3 WS2022/2023<a></li>
 </u>
 </p>
 </body>
