--- a/ana3/index.html
+++ b/ana3/index.html
@@ -16,12 +16,12 @@
 <p>Bei Fragen oder Hinweisen freue ich mich über eine E-Mail an robin.mader'at'campus.lmu.de.</p>
 <p>
 <ul>
-<li>Tutorium 4: &nbsp; &nbsp;<a href = "./ana3tut4.pdf">Aufgaben</a>&nbsp; </li>
-<li>Tutorium 5: &nbsp; &nbsp;<a href = "./ana3tut5.pdf">Aufgaben</a>&nbsp; </li>
-<li>Tutorium 6: &nbsp; &nbsp;<a href = "./ana3tut6.pdf">Aufgaben</a>&nbsp; </li>
-<li>Tutorium 7: &nbsp; &nbsp;<a href = "./ana3tut7.pdf">Aufgaben</a>&nbsp; </li>
-<li>Tutorium 8: &nbsp; &nbsp;<a href = "./ana3tut8.pdf">Aufgaben</a>&nbsp; </li>
-<li>Tutorium 9: &nbsp; &nbsp;<a href = "./ana3tut9.pdf">Aufgaben</a>&nbsp; </li>
+<li><a href = "./ana3tut4.pdf">Tutorium 4</a>&nbsp; </li>
+<li><a href = "./ana3tut5.pdf">Tutorium 5</a>&nbsp; </li>
+<li><a href = "./ana3tut6.pdf">Tutorium 6</a>&nbsp; </li>
+<li><a href = "./ana3tut7.pdf">Tutorium 7</a>&nbsp; </li>
+<li><a href = "./ana3tut8.pdf">Tutorium 8</a>&nbsp; </li>
+<li><a href = "./ana3tut9.pdf">Tutorium 9</a>&nbsp; </li>
 </ul>
 </p>
 <p><a href="./meme/1.jpg" style="text-decoration: none">Meme.</a></p>
