--- a/ana3/index.html
+++ b/ana3/index.html
@@ -10,7 +10,7 @@
   </script>
 </head>
 <body>
-<h1>Tutorium Analysis 3, Mi 10-12, WS2022/2023)</h1>
+<h1>Tutorium Analysis 3, Mi 10-12, WS2022/2023</h1>
 <p>Hier findet ihr Unterlagen zu unserem Tutorium.</p>
 <p>Disclaimer: Bei den unten verlinkten Dokumenten wird Fehlerlosigkeit nicht garantiert. Die Liste startet mit Blatt 4, da ich das Tutorium erst ab dort digital vorbereitet habe. Alles ohne Gewähr. </p>
 <p>Bei Fragen oder Hinweisen freue ich mich über eine E-Mail an robin.mader'at'campus.lmu.de.</p>
