--- a/ana3/index.html
+++ b/ana3/index.html
@@ -22,7 +22,7 @@
 <li><a href = "./ana3tut7.pdf">Tutorium 7</a>&nbsp; </li>
 <li><a href = "./ana3tut8.pdf">Tutorium 8</a>&nbsp; </li>
 <li><a href = "./ana3tut9.pdf">Tutorium 9</a>&nbsp; </li>
-<li><a href="./meme/1.jpg" style="text-decoration: none">Meme.</a></li>
+<li><a href="./meme/1.jpg">Meme.</a></li>
 </ul>
 </p>
 </body>
