--- a/ana3/index.html
+++ b/ana3/index.html
@@ -23,7 +23,8 @@
 <li><a href = "./ana3tut8.pdf">Tutorium 8</a>&nbsp; </li>
 <li><a href = "./ana3tut9.pdf">Tutorium 9</a>&nbsp; </li>
 <li><a href = "./ana3tut10.pdf">Tutorium 10</a>&nbsp; </li>
-<li>Memes <a href="./meme/1.jpg">1</a>, <a href="./meme/2.jpg">2</a></li>
+<li><a href = "./ana3quiz.pdf">Quiz</a> und <a href = "./ana3tut14.pdf">Lösungen</a> </li>
+<li>Memes <a href="./meme/1.jpg">1</a>, <a href="./meme/2.jpg">2</a>, <a href="./meme/3.jpg">3</a></li>
 </ul>
 </p>
 </body>
